[package]
name = "cplex"
version = "12.6.0"
authors = ["Max Resch <max.resch@student.tuwien.ac.at>"]
build= "build.rs"

[dependencies]
libc = "0.2.13"

[build-dependencies]
glob = "0.2.11"

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
panic = 'unwind'

[features]
cpx_call_log = []
