[package]
name = "cplex_sys"
version = "12.6.2"
authors = ["Max Resch <max.resch@student.tuwien.ac.at>"]
build= "build.rs"

[dependencies]
libc = "0.2.13"

[lib]
path = "lib.rs"

[build-dependencies]
glob = "0.2.11"

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true

[features]
cpx_static = []
